@@ -1,3 +1,8 @@
+Mon Feb 26 22:42:09 1996  Mark Eichin  <eichin@cygnus.com>
+
+	* kdb5_edit.c: new command line option -f stashfile.
+	* kdb5_edit.M: document stashfile option.
+
 Mon Feb 26 22:13:45 1996  Mark Eichin  <eichin@cygnus.com>
 
 	* dump.c (process_k5beta_record): since V4 salt type has no data
